# backend/src/documentation/public-swagger.json
@@ -120,6 +120,13 @@
             "description": "Get results on or after a Unix timestamp in milliseconds. Must be no earlier than Thu May 14 2020 04:00:00 GMT+0000 (i.e., 1670454228000). If omitted, defaults to the most recent results.",
             "required": false,
             "type": "number"
+          },
+          {
+            "name": "beforeTimestamp",
+            "in": "query",
+            "description": "Get results before a Unix timestamp in milliseconds. Must be no earlier than Thu May 14 2020 04:00:00 GMT+0000 (i.e., 1670454228000). If omitted, defaults to the most recent results. This can only be used by premium users.",
+            "required": false,
+            "type": "number"
           }
         ],
         "responses": {
